# fest

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  audio_info.c  audio_info.h  battery_info.c  battery_info.h  cpu_info.h  gpu_info.c  gpu_info.h  json_structure.c  json_structure.h  main.c  memory_info.c  memory_info.h  monitor_info.c  monitor_info.h  motherboard_info.c  motherboard_info.h  network_info.c  network_info.h  storage_info.c  storage_info.h  system_info_dll.c  system_info_dll.h  system_info_internal.h  test_app.c  wmi_helper.h
.github/workflows/: cmake-single-platform.yml
include/: audio_info.h  battery_info.h  cpu_info.h  gpu_info.h  json_structure.h  memory_info.h  monitor_info.h  motherboard_info.h  network_info.h  storage_info.h  system_info_dll.h  system_info_internal.h  wmi_helper.h
src/: audio_info.c  battery_info.c  cpu_info.c  gpu_info.c  json_structure.c  main.c  memory_info.c  monitor_info.c  motherboard_info.c  network_info.c  storage_info.c  system_info.rc  system_info_dll.c  test_app.c  wmi_helper.c
tests/: CMakeLists.txt  tests_audio.c  tests_battery.c  tests_cpu.c  tests_gpu.c  tests_memory.c  tests_monitor.c  tests_motherboard.c  tests_network.c  tests_storage.c  tests_summary.c
